Fix y position of edit controls for small screens #160
**Why?** On small screens - and the default farmOS layout - the
  controls often overlap or even go off the bottom of the map
  making them hard to use or completely inaccessible.

--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@
 }
 
 .ol-edit.ol-control {
-  top: 5.5em;
+  top: 4.75em;
 }
 
 .ol-rotate.ol-control {
